--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "db:studio": "prisma studio",
     "dev": "next dev",
     "postinstall": "prisma generate",
+    "prisma:push": "npx prisma db push",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "stripe:listen": "stripe listen --forward-to localhost:3000/api/stripe-webhook --latest"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -20,10 +22,12 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "micro": "^10.0.1",
     "next": "^14.0.0",
     "next-auth": "^4.23.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stripe": "^14.3.0",
     "superjson": "^1.13.1",
     "zod": "^3.22.4"
   },
